# pyfirds

./: .gitmodules  LICENSE  Pipfile  README.md  TODO  TODO.md  genindex.html  index.html  objects.inv  py-modindex.html  pyfirds.html  pyproject.toml  search.html  searchindex.js  usage.html
_sources/: usage.rst.txt
docs/source/: conf.py  index.rst  pyfirds.rst  schema.md
pyfirds/: __init__.py  _firds_dl.py  categories.py  download.py  identifiers.py  model.py  parse.py  parse_utils.py  xml.py  xml_utils.py
pyfirds/db/: __init__.py  dao.py  schema.py
pyfirds/parse/: delta.py  full.py
scripts/: firds-dl.py
test/: common.py  pytest.ini  test_dao.py  test_download.py  test_parse.py  test_parse_dltins.py  test_parse_fulins.py  time_parse.py  values.py
